[gd_scene load_steps=12 format=3 uid="uid://sxw2tmihs4l4"]

[ext_resource type="Script" path="res://2d/source/scripts/game/game_ui_sub/magic_panel.gd" id="1_srf3b"]
[ext_resource type="Texture2D" uid="uid://cxlojljuwr10t" path="res://2d/assets/images/units.png" id="2_335rt"]
[ext_resource type="Texture2D" uid="uid://cehvroolrl2gh" path="res://2d/assets/images/rune_select1.png" id="3_nbuh2"]
[ext_resource type="Texture2D" uid="uid://cxsbmk7frcrdk" path="res://2d/assets/images/cursor/rune_select2.png" id="4_y13ws"]
[ext_resource type="Texture2D" uid="uid://ccqq56lhnerqv" path="res://2d/assets/images/units-overlay.png" id="5_y6hbp"]
[ext_resource type="Theme" uid="uid://c5jg8sho14qvp" path="res://2d/assets/themes/theme_small_font.tres" id="6_4scxr"]
[ext_resource type="Theme" uid="uid://b1mllftlbva2u" path="res://2d/assets/themes/theme.tres" id="8_eu4wl"]
[ext_resource type="AudioStream" uid="uid://c0wn3isdward8" path="res://audio/sound/click.ogg" id="10_5swt4"]
[ext_resource type="AudioStream" uid="uid://qgd14q4w8stn" path="res://audio/sound/buzz.ogg" id="11_5pqk4"]

[sub_resource type="SpriteFrames" id="2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_nbuh2")
}, {
"duration": 1.0,
"texture": ExtResource("4_y13ws")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n7k1y"]
bg_color = Color(0, 0.156863, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_blend = true

[node name="Node2D" type="Node2D" groups=["magic_panel"]]
script = ExtResource("1_srf3b")

[node name="Runes" type="Node2D" parent="."]
position = Vector2(0, 5)

[node name="BG" type="Sprite2D" parent="Runes"]
position = Vector2(847, 192)
scale = Vector2(2, 2)
texture = ExtResource("2_335rt")

[node name="Sprite1" type="TextureRect" parent="Runes"]
offset_left = 746.0
offset_top = 158.0
offset_right = 781.0
offset_bottom = 193.0

[node name="Sprite2" type="TextureRect" parent="Runes"]
offset_left = 780.0
offset_top = 158.0
offset_right = 815.0
offset_bottom = 193.0

[node name="Sprite3" type="TextureRect" parent="Runes"]
offset_left = 814.0
offset_top = 158.0
offset_right = 849.0
offset_bottom = 193.0

[node name="Sprite4" type="TextureRect" parent="Runes"]
offset_left = 848.0
offset_top = 158.0
offset_right = 883.0
offset_bottom = 193.0

[node name="Sprite5" type="TextureRect" parent="Runes"]
offset_left = 882.0
offset_top = 158.0
offset_right = 917.0
offset_bottom = 193.0

[node name="Sprite6" type="TextureRect" parent="Runes"]
offset_left = 916.0
offset_top = 158.0
offset_right = 951.0
offset_bottom = 193.0

[node name="Sprite7" type="TextureRect" parent="Runes"]
offset_left = 950.0
offset_top = 158.0
offset_right = 985.0
offset_bottom = 193.0

[node name="Sprite8" type="TextureRect" parent="Runes"]
offset_left = 984.0
offset_top = 158.0
offset_right = 1019.0
offset_bottom = 193.0

[node name="Sprite9" type="TextureRect" parent="Runes"]
offset_left = 746.0
offset_top = 192.0
offset_right = 781.0
offset_bottom = 227.0

[node name="Sprite10" type="TextureRect" parent="Runes"]
offset_left = 780.0
offset_top = 192.0
offset_right = 815.0
offset_bottom = 227.0

[node name="Sprite11" type="TextureRect" parent="Runes"]
offset_left = 814.0
offset_top = 192.0
offset_right = 849.0
offset_bottom = 227.0

[node name="Sprite12" type="TextureRect" parent="Runes"]
offset_left = 848.0
offset_top = 192.0
offset_right = 883.0
offset_bottom = 227.0

[node name="Sprite13" type="TextureRect" parent="Runes"]
offset_left = 882.0
offset_top = 192.0
offset_right = 917.0
offset_bottom = 227.0

[node name="Sprite14" type="TextureRect" parent="Runes"]
offset_left = 916.0
offset_top = 192.0
offset_right = 951.0
offset_bottom = 227.0

[node name="Sprite15" type="TextureRect" parent="Runes"]
offset_left = 950.0
offset_top = 192.0
offset_right = 985.0
offset_bottom = 227.0

[node name="Sprite16" type="TextureRect" parent="Runes"]
offset_left = 984.0
offset_top = 192.0
offset_right = 1019.0
offset_bottom = 227.0

[node name="Sprite17" type="TextureRect" parent="Runes"]
offset_left = 746.0
offset_top = 226.0
offset_right = 781.0
offset_bottom = 261.0

[node name="Sprite18" type="TextureRect" parent="Runes"]
offset_left = 780.0
offset_top = 226.0
offset_right = 815.0
offset_bottom = 261.0

[node name="Sprite19" type="TextureRect" parent="Runes"]
offset_left = 814.0
offset_top = 226.0
offset_right = 849.0
offset_bottom = 261.0

[node name="Sprite20" type="TextureRect" parent="Runes"]
offset_left = 848.0
offset_top = 226.0
offset_right = 883.0
offset_bottom = 261.0

[node name="Sprite21" type="TextureRect" parent="Runes"]
visible = false
offset_left = 882.0
offset_top = 226.0
offset_right = 917.0
offset_bottom = 261.0

[node name="Sprite22" type="TextureRect" parent="Runes"]
offset_left = 916.0
offset_top = 226.0
offset_right = 951.0
offset_bottom = 261.0

[node name="Sprite23" type="TextureRect" parent="Runes"]
offset_left = 950.0
offset_top = 226.0
offset_right = 985.0
offset_bottom = 261.0

[node name="Sprite24" type="TextureRect" parent="Runes"]
offset_left = 984.0
offset_top = 226.0
offset_right = 1019.0
offset_bottom = 261.0

[node name="RuneSelect" type="AnimatedSprite2D" parent="Runes"]
visible = false
position = Vector2(763, 243)
sprite_frames = SubResource("2")

[node name="RuneBGoverlay" type="Sprite2D" parent="Runes"]
position = Vector2(847, 202)
scale = Vector2(2, 2)
texture = ExtResource("5_y6hbp")

[node name="Title" type="Label" parent="Runes"]
offset_left = 709.0
offset_top = 126.0
offset_right = 838.0
offset_bottom = 144.0
theme = ExtResource("6_4scxr")

[node name="ArrowUp" type="Button" parent="Runes"]
offset_left = 673.0
offset_top = 130.0
offset_right = 705.0
offset_bottom = 162.0
scale = Vector2(0.4, 0.4)
focus_neighbor_right = NodePath("../ArrowDown")
focus_next = NodePath("../ArrowDown")

[node name="ArrowDown" type="Button" parent="Runes"]
offset_left = 691.0
offset_top = 130.0
offset_right = 723.0
offset_bottom = 162.0
scale = Vector2(0.4, 0.4)
focus_neighbor_left = NodePath("../ArrowUp")
focus_previous = NodePath("../ArrowUp")
theme = ExtResource("8_eu4wl")

[node name="SoundClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_5swt4")

[node name="SoundBuzz" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_5pqk4")
volume_db = -10.0

[node name="Panel" type="Panel" parent="."]
visible = false
offset_left = 676.0
offset_top = 232.0
offset_right = 1016.0
offset_bottom = 259.0
theme_override_styles/panel = SubResource("StyleBoxFlat_n7k1y")

[node name="Label" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 5.0
offset_top = 7.0
offset_right = 331.0
offset_bottom = 24.0

[connection signal="pressed" from="Runes/ArrowUp" to="." method="_on_arrow_up_pressed"]
[connection signal="pressed" from="Runes/ArrowDown" to="." method="_on_arrow_down_pressed"]
